[package]
name = "profirust"
version = "0.1.0"
edition = "2021"

[features]
phy-linux = ["rs485", "libc", "std"]
std = ["managed/std"]
alloc = ["managed/alloc"]

default = ["std", "phy-linux"]

[dependencies]
libc = { version = "0.2.139", optional = true }
log = "0.4.17"
managed = { version = "0.8.0", default-features = false, features = ["map"] }
rs485 = { version = "0.1.0", optional = true }

[workspace]
members = [
    "gsd/",
]

[dev-dependencies]
env_logger = "0.10.0"
