[package]
name = "profirust"
version = "0.1.0"
edition = "2021"

description = "PROFIBUS-DP communication stack in pure Rust"
categories = ["no-std", "embedded", "science::robotics" ]
keywords = ["profibus", "profibus-dp", "fieldbus", "siemens"]
authors = ["Rahix <rahix@rahix.de>"]
license = "MIT OR Apache-2.0"

[features]
phy-linux = ["rs485", "libc", "std"]
phy-testbus = ["bus", "std"]
std = ["managed/std"]
alloc = ["managed/alloc"]

default = ["std", "phy-linux", "phy-testbus"]

[dependencies]
bitvec = { version = "1.0.1", default-features = false }
bus = { version = "2.3.0", optional = true }
libc = { version = "0.2.139", optional = true }
log = "0.4.17"
managed = { version = "0.8.0", default-features = false, features = ["map"] }
rs485 = { version = "0.1.0", optional = true }

[workspace]
members = [
    "gsd/",
    "gsdtool/",
]

[dev-dependencies]
env_logger = "0.10.0"
proptest = "1.2.0"
proptest-derive = "0.3.0"
