[package]
name = "profirust"
version = "0.1.1"
edition = "2021"

description = "PROFIBUS-DP compatible communication stack in pure Rust"
categories = ["no-std", "embedded", "science::robotics" ]
keywords = ["profibus", "profibus-dp", "fieldbus", "siemens"]
authors = ["Rahix <rahix@rahix.de>"]
license = "MIT OR Apache-2.0"

repository = "https://github.com/rahix/profirust"

[features]
phy-linux = ["rs485", "libc", "std"]
phy-simulator = ["std"]
phy-rp2040 = ["rp2040-hal", "fugit", "embedded-hal", "nb", "cortex-m"]
std = ["managed/std"]
alloc = ["managed/alloc"]

default = ["std", "phy-linux", "phy-simulator"]

[dependencies]
bitflags = "2.3.3"
bitvec = { version = "1.0.1", default-features = false }
cortex-m = { version = "0.7.7", optional = true }
embedded-hal = { version = "0.2.7", optional = true }
fugit = { version = "0.3.7", optional = true }
libc = { version = "0.2.139", optional = true }
log = "0.4.17"
managed = { version = "0.8.0", default-features = false, features = ["map"] }
nb = { version = "1.1.0", optional = true }
rp2040-hal = { version = "0.9.0", optional = true }
rs485 = { version = "0.1.0", optional = true }

[workspace]
members = [
    "gsd-parser/",
    "gsdtool/",
]

[dev-dependencies]
env_logger = "0.10.0"
proptest = "1.2.0"
proptest-derive = "0.3.0"
rstest = { version = "0.18.2", default-features = false }

[patch.crates-io]
rp2040-hal = { git = "https://github.com/rahix/rp-hal.git", rev = "6baaf07b0ac2017dbbea1ba8cf5986b74cd81104" }

[package.metadata.docs.rs]
all-features = true
