[package]
name = "gsd-parser"
version = "0.1.0"
edition = "2021"

description = "Parser for PROFIBUS GSD files (Generic Station Description)"
categories = ["parser-implementations", "science::robotics"]
keywords = ["profibus", "profibus-dp", "fieldbus", "siemens", "parser"]
authors = ["Rahix <rahix@rahix.de>"]
license = "MIT OR Apache-2.0"

repository = "https://github.com/rahix/profirust"
homepage = "https://github.com/rahix/profirust/tree/main/gsd-parser"

[dependencies]
bitflags = "2.4.0"
pest = "2.5.2"
pest_derive = "2.5.2"

[dev-dependencies]
insta = "1.24.1"
rstest = { version = "0.18.2", default-features = false }
