[package]
name = "gsd-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "1.3.2"
console = { version = "0.15.7", default-features = false }
dialoguer = { version = "0.10.4", default-features = false, features = ["editor"] }
gumdrop = "0.8.1"
pest = "2.5.2"
pest_derive = "2.5.2"

[dev-dependencies]
insta = "1.24.1"
