[package]
name = "gsdtool"
version = "0.1.0"
edition = "2021"

[dependencies]
console = { version = "0.15.7", default-features = false }
dialoguer = { version = "0.10.4", default-features = false, features = ["editor", "fuzzy-select"] }
gsd-parser = { version = "0.1.0", path = "../gsd" }
gumdrop = "0.8.1"
