[package]
edition = "2021"
name = "profirust-example-rp-pico"
version = "0.0.0"
license = "MIT OR Apache-2.0"
publish = false

# Needed because this is separate from the Cargo workspace in the repository root:
[workspace]

[[bin]]
name = "dp-master-pico"
path = "src/main.rs"
test = false
bench = false

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
fugit = "0.3.7"
heapless = "0.7.16"
nb = "1.1.0"
process-image = "0.1.1"
rp-pico = "0.8"
usb-device = "0.2.9"
usbd-serial = "0.1.1"

[dependencies.log]
version = "0.4.20"
# Change this to use a different log level:
features = ["max_level_debug"]

[dependencies.profirust]
path = "../../"
version = "0.0.1"
default-features = false
features = ["phy-rp2040"]

[patch.crates-io]
rp2040-hal = { git = "https://github.com/rahix/rp-hal.git", rev = "6baaf07b0ac2017dbbea1ba8cf5986b74cd81104" }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
